--- a/wandering-inn-stats-viewer/tsconfig.json
+++ b/wandering-inn-stats-viewer/tsconfig.json
@@ -17,6 +17,7 @@
     "target": "es2017",
     "module": "es2020",
     "resolveJsonModule": true,
+    "allowSyntheticDefaultImports": true,
     "lib": [
       "es2019",
       "dom"
